--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,7 @@ a.nav-link:hover {
     color: #ba60ff;
 }
 
-h1,
-a {
+h1 {
     margin-top: 0;
     font-family: 'Bodoni Moda';
     color: #03c4a1;
@@ -62,10 +61,21 @@ a {
 }
 
 h2,
-h3 {
+h3,
+h4,
+h5,
+h6,
+a {
     color: #03c4a1;
     font-family: "Fira Code";
-    font-size: 30px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+p {
+    color: #03c4a1;
+    font-family: "Fira Code";
+    font-size: 15px;
     font-weight: bold;
 }
 
@@ -75,7 +85,9 @@ h3 {
 }
 
 .title-col {
-    margin: 10% 0;
+    margin: 10% 0 0 0;
+    background-color: #13071d;
+    border: #03c4a1 solid 2px;
 }
 
 
@@ -97,14 +109,14 @@ p {
     color: #03c4a1;
 }
 
-#about .container-fluid {
-    width: inherit;
-}
+#about .container-fluid {}
 
 .about-col {
-    text-align: left;
     background-color: #13071d;
+    height: auto;
+    border: #03c4a1 solid 2px;
     padding: 5%;
+    text-align: left;
 }
 
 .about-title {
@@ -113,7 +125,9 @@ p {
 }
 
 .about-image {
-    width: 20%;
+    text-align: left;
+    margin: 0;
+    float: right;
 }
 
 .big-heading {
@@ -131,19 +145,10 @@ p {
     line-height: 1.5;
 }
 
-#projects {
-    width: inherit;
-    background-color: #13071d;
-    color: #03c4a1;
-}
+#projects {}
 
 #projects .container-fluid {
     width: inherit;
-}
-
-#contact {
-    background-color: #13071d;
-    color: #03c4a1;
 }
 
 #wrapper {
@@ -164,5 +169,14 @@ p {
 }
 
 .fixed-top {
-    padding: 3% 5% 0;
+    padding: 2% 15%;
+}
+
+.projects-col,
+.resume-col,
+.contact-col {
+    width: max-content;
+    background-color: #13071d;
+    color: #03c4a1;
+    border: #03c4a1 solid 2px;
 }
